# kraken

./: .gitignore  Cargo.toml  README.md
kraken-proto/: Cargo.toml
kraken-proto/src/: lib.rs
kraken-proto/src/codec/: decoder.rs  encoder.rs  mod.rs
kraken-proto/src/proto/: client.rs  mod.rs  server.rs
kraken-proto/tests/: decoder_test.rs  encoder_test.rs
kraken-server/: Cargo.toml
kraken-server/src/: main.rs
kraken-server/src/auth/: mod.rs
kraken-server/src/config/: mod.rs
kraken-server/src/smtp/: mod.rs  service.rs
kraken-smtp/: Cargo.toml
kraken-smtp/src/: lib.rs
kraken-smtp/src/address/: mod.rs
kraken-smtp/src/envelope/: mod.rs
kraken-smtp/src/message/: mod.rs
src/: config.rs  lib.rs
src/server/: mod.rs
